--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for DynGig-RCE
 
+1.01    2013-01-03
+        add some options to client
+
 1.00    2012-06-29
         PREREQ_PM in Makefile
         CLI module deprecated by DynGig::CLI
